@@ -82,6 +82,12 @@ User=nobody
 # Sets the default time in seconds to displays a screen.
 WaitTime=5
 
+# If set to no, LCDd will start with screen rotation disabled. This has the
+# same effect as if the ToggleRotateKey had been pressed. Rotation will start
+# if the ToggleRotateKey is pressed. Note that this setting does not turn off
+# priority sorting of screens. [default: on; legal: on, off]
+#AutoRotate=no
+
 # If yes, the the serverscreen will be rotated as a usual info screen. If no,
 # it will be a background screen, only visible when no other screens are
 # active. The special value 'blank' is similar to no, but only a blank screen
